Added final version hotels-service