@@ -4,34 +4,21 @@ import java.time.Instant;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import com.tripify.hotels.parser.dto.HotelsResponseDto;
 import com.tripify.hotels.parser.models.HotelsProviderAdapter;
 import com.tripify.hotels.parser.models.Provider;
-import com.tripify.hotels.parser.models.common.CardsInfo;
-import com.tripify.hotels.parser.models.common.CashInfo;
-import com.tripify.hotels.parser.models.common.CheckInOut;
-import com.tripify.hotels.parser.models.common.Comment;
-import com.tripify.hotels.parser.models.common.Condition;
-import com.tripify.hotels.parser.models.common.CountryInfo;
-import com.tripify.hotels.parser.models.common.Facility;
-import com.tripify.hotels.parser.models.common.GpsCoordinates;
-import com.tripify.hotels.parser.models.common.Hotel;
-import com.tripify.hotels.parser.models.common.NearbyPlaces;
-import com.tripify.hotels.parser.models.common.PaymentMethods;
-import com.tripify.hotels.parser.models.common.Photo;
-import com.tripify.hotels.parser.models.common.Place;
-import com.tripify.hotels.parser.models.common.RefundRule;
-import com.tripify.hotels.parser.models.common.Reviews;
-import com.tripify.hotels.parser.models.common.TermsPlacement;
+import com.tripify.hotels.parser.models.common.*;
+import com.tripify.hotels.parser.models.provider.mock.MockBed;
 import com.tripify.hotels.parser.models.provider.mock.MockProviderHotel;
 import com.tripify.hotels.parser.models.provider.mock.MockReviews;
+import com.tripify.hotels.parser.models.provider.mock.MockRoom;
+import com.tripify.hotels.parser.models.provider.mock.MockRoomRate;
 import org.springframework.stereotype.Component;
 
-/**
- * Mock-адаптер: приводит DTO поставщика (MockProviderHotel) к общему HotelsResponseDto.
- */
 @Component
 public class MockHotelsProviderAdapter implements HotelsProviderAdapter<MockProviderHotel> {
 
@@ -52,15 +39,13 @@ public class MockHotelsProviderAdapter implements HotelsProviderAdapter<MockProv
                 .map(this::toHotel)
                 .collect(Collectors.toList());
 
-        String countryAlpha2 = providerData.getFirst().getCountryCode();
-        CountryInfo countryInfo = CountryInfo.builder()
-                .title(countryAlpha2)
-                .alpha2(countryAlpha2)
-                .build();
+        MockProviderHotel first = providerData.getFirst();
+        String countryAlpha2 = first.getCountryCode();
 
         return HotelsResponseDto.builder()
                 .hotels(hotels)
-                .countryInfo(countryInfo)
+                .countryInfo(CountryInfo.builder().title(countryAlpha2).alpha2(countryAlpha2).build())
+                .cityName(first.getLocality())
                 .providerName(Provider.MOCK.getProviderName())
                 .parsedAt(Instant.now())
                 .providedAt(Instant.now())
@@ -77,35 +62,37 @@ public class MockHotelsProviderAdapter implements HotelsProviderAdapter<MockProv
         NearbyPlaces nearby = NearbyPlaces.builder()
                 .food(List.of(
                         Place.builder().title("Restaurant").distance(0.5).unit("km").build(),
-                        Place.builder().title("Cafe").distance(0.2).unit("km").build()
-                ))
-                .beaches(List.of(Place.builder().title("Beach").distance(1.0).unit("km").build()))
+                        Place.builder().title("Cafe").distance(0.2).unit("km").build()))
+                .beaches(List.of(
+                        Place.builder().title("Beach").distance(1.0).unit("km").build()))
                 .build();
 
         Reviews reviews = toReviews(raw.getReviewSummary());
+
         TermsPlacement terms = TermsPlacement.builder()
                 .checkIn(CheckInOut.builder().afterTime("14:00").beforeTime("00:00").timezone("UTC").build())
                 .checkOut(CheckInOut.builder().afterTime("00:00").beforeTime("11:00").timezone("UTC").build())
-                .cancellation(true)
-                .refundRule(RefundRule.builder()
-                        .refundPrepayment(true)
-                        .conditions(List.of(
-                                Condition.builder().quantityPercent(100).condition("Free cancellation 24h before").build()))
-                        .build())
-                .smoking(false)
                 .petFriendly(false)
                 .partyFriendly(false)
                 .build();
 
-        PaymentMethods payment = PaymentMethods.builder()
-                .cashInfo(CashInfo.builder().isCash(true).currency(List.of(raw.getPriceCurrency())).build())
-                .cardsInfo(CardsInfo.builder().isCard(true).cardTypes(List.of("Visa", "MasterCard")).build())
-                .build();
+        List<Photo> photos = raw.getPhotos() != null
+                ? IntStream.range(0, raw.getPhotos().size())
+                .mapToObj(i -> Photo.builder()
+                        .link(raw.getPhotos().get(i).getUrl())
+                        .order(i)
+                        .build())
+                .collect(Collectors.toList())
+                : Collections.emptyList();
 
         List<Facility> facilities = raw.getAmenities() != null
                 ? raw.getAmenities().stream()
                 .map(a -> Facility.builder().type(a.getCode()).isFree(a.isFree()).build())
                 .collect(Collectors.toList())
+                : Collections.emptyList();
+
+        List<Room> rooms = raw.getRooms() != null
+                ? raw.getRooms().stream().map(this::toRoom).collect(Collectors.toList())
                 : Collections.emptyList();
 
         return Hotel.builder()
@@ -116,29 +103,147 @@ public class MockHotelsProviderAdapter implements HotelsProviderAdapter<MockProv
                 .address(raw.getStreet())
                 .city(raw.getLocality())
                 .country(raw.getCountryCode())
-                .currency(raw.getPriceCurrency())
-                .price(raw.getPriceAmount())
                 .hotelClass(raw.getStars())
                 .gpsCoordinates(gps)
                 .nearbyPlaces(nearby)
                 .reviews(reviews)
                 .termsPlacement(terms)
-                .paymentMethods(payment)
+                .photos(photos)
                 .facilities(facilities)
+                .rooms(rooms)
                 .build();
     }
 
-    private static long hashId(String s) {
-        long h = 0;
-        for (int i = 0; i < s.length(); i++) {
-            h = 31 * h + s.charAt(i);
-        }
-        return Math.abs(h) % 1_000_000_000L;
+
+    private Room toRoom(MockRoom raw) {
+        RoomArea area = RoomArea.builder()
+                .value(raw.getAreaSqm())
+                .unit("M2")
+                .build();
+
+        List<Photo> photos = raw.getPhotos() != null
+                ? IntStream.range(0, raw.getPhotos().size())
+                .mapToObj(i -> Photo.builder()
+                        .link(raw.getPhotos().get(i).getUrl())
+                        .order(i)
+                        .build())
+                .collect(Collectors.toList())
+                : Collections.emptyList();
+
+        List<Bed> beds = raw.getBeds() != null
+                ? raw.getBeds().stream()
+                .map(b -> Bed.builder().type(b.getBedType()).count(b.getQty()).build())
+                .collect(Collectors.toList())
+                : Collections.emptyList();
+
+        Bathrooms bathrooms = Bathrooms.builder()
+                .count(raw.getBathroomCount())
+                .isPrivate(raw.isPrivateBathroom())
+                .build();
+
+        RoomOccupancy occupancy = RoomOccupancy.builder()
+                .minAdults(1)
+                .maxAdults(raw.getMaxAdults())
+                .maxChildren(raw.getMaxChildren())
+                .maxGuests(raw.getMaxGuests())
+                .build();
+
+        List<RoomRate> rates = raw.getRates() != null
+                ? raw.getRates().stream().map(this::toRoomRate).collect(Collectors.toList())
+                : Collections.emptyList();
+
+        return Room.builder()
+                .roomId(UUID.randomUUID().toString())
+                .providerRoomId(raw.getId())
+                .name(raw.getLabel())
+                .roomType(raw.getCategory())
+                .description(raw.getInfo())
+                .area(area)
+                .floor(raw.getFloor())
+                .smokingAllowed(raw.isSmoking())
+                .views(raw.getViews() != null ? raw.getViews() : Collections.emptyList())
+                .photos(photos)
+                .beds(beds)
+                .bathrooms(bathrooms)
+                .occupancy(occupancy)
+                .amenities(raw.getAmenityCodes() != null ? raw.getAmenityCodes() : Collections.emptyList())
+                .accessibility(raw.getAccessibilityCodes() != null ? raw.getAccessibilityCodes() : Collections.emptyList())
+                .rates(rates)
+                .build();
     }
+
+
+    private RoomRate toRoomRate(MockRoomRate raw) {
+        Money base = Money.builder().amount(raw.getBaseAmount()).currency(raw.getCurrency()).build();
+        Money tax = Money.builder().amount(raw.getTaxAmount()).currency(raw.getCurrency()).build();
+        Money total = Money.builder().amount(raw.getTotalAmount()).currency(raw.getCurrency()).build();
+
+        Discount discount = raw.getDiscountPercent() != null
+                ? Discount.builder().percent(raw.getDiscountPercent()).build()
+                : null;
+
+        RatePricing pricing = RatePricing.builder()
+                .basePrice(base)
+                .taxesAndFees(tax)
+                .totalPrice(total)
+                .pricePerNight(base)
+                .discount(discount)
+                .build();
+
+        RatePayment payment = RatePayment.builder()
+                .type(raw.getPaymentType())
+                .prepaymentRequired(raw.isPrepay())
+                .cards(raw.getAcceptedCards())
+                .build();
+
+        MealPlan mealPlan = MealPlan.builder()
+                .type(raw.getMeal())
+                .description(raw.getMealNote())
+                .build();
+
+        Penalty cancelPenalty = Penalty.builder()
+                .type(raw.getPenaltyType())
+                .build();
+
+        CancellationPolicy cancellation = CancellationPolicy.builder()
+                .refundable(raw.isRefundable())
+                .freeCancellationUntil(raw.getFreeCancelBefore())
+                .cancelPenalty(cancelPenalty)
+                .build();
+
+        RateAvailability availability = RateAvailability.builder()
+                .roomsLeft(raw.getRoomsLeft())
+                .soldOut(raw.isSoldOut())
+                .build();
+
+        Loyalty loyalty = Loyalty.builder()
+                .pointsEarned(raw.getLoyaltyPoints())
+                .build();
+
+        return RoomRate.builder()
+                .rateId(UUID.randomUUID().toString())
+                .providerRateId(raw.getId())
+                .title(raw.getLabel())
+                .tags(raw.getTags())
+                .pricing(pricing)
+                .payment(payment)
+                .mealPlan(mealPlan)
+                .cancellationPolicy(cancellation)
+                .availability(availability)
+                .instantConfirmation(raw.isInstantConfirm())
+                .loyalty(loyalty)
+                .perks(raw.getPerks())
+                .build();
+    }
+
 
     private Reviews toReviews(MockReviews mock) {
         if (mock == null) {
-            return Reviews.builder().total(0).rating(0).reviewsHistogram(Map.of()).reviewsClasses(Map.of()).comments(List.of()).totalComments(0).build();
+            return Reviews.builder()
+                    .total(0).rating(0)
+                    .reviewsHistogram(Map.of()).reviewsClasses(Map.of())
+                    .comments(List.of()).totalComments(0)
+                    .build();
         }
         List<Comment> comments = mock.getItems() != null
                 ? mock.getItems().stream()
@@ -152,11 +257,17 @@ public class MockHotelsProviderAdapter implements HotelsProviderAdapter<MockProv
                         .commonText(c.getText())
                         .reviewDate(c.getDate())
                         .photos(c.getImages() != null
-                                ? c.getImages().stream().map(p -> Photo.builder().link(p.getUrl()).build()).collect(Collectors.toList())
+                                ? IntStream.range(0, c.getImages().size())
+                                .mapToObj(i -> Photo.builder()
+                                        .link(c.getImages().get(i).getUrl())
+                                        .order(i)
+                                        .build())
+                                .collect(Collectors.toList())
                                 : List.of())
                         .build())
                 .collect(Collectors.toList())
                 : List.of();
+
         return Reviews.builder()
                 .total(mock.getCount())
                 .rating(mock.getScore())
@@ -165,5 +276,14 @@ public class MockHotelsProviderAdapter implements HotelsProviderAdapter<MockProv
                 .comments(comments)
                 .totalComments(comments.size())
                 .build();
+    }
+
+
+    private static long hashId(String s) {
+        long h = 0;
+        for (int i = 0; i < s.length(); i++) {
+            h = 31 * h + s.charAt(i);
+        }
+        return Math.abs(h) % 1_000_000_000L;
     }
 }
